--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>de.thtesche</groupId>
-	<artifactId>springapplication</artifactId>
+	<artifactId>authserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springapplication</name>
-	<description>Demo project for Spring Boot with Spring Security</description>
+	<name>authserver</name>
+	<description>Demo project for Spring Authorization Server</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
